@@ -3,7 +3,6 @@ package io.quarkus.ts.http.advanced.reactive;
 import static io.quarkus.ts.http.advanced.reactive.MultipartResource.MULTIPART_FORM_PATH;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 
 import jakarta.ws.rs.Consumes;
@@ -14,9 +13,8 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.Response.Status;
 
-import org.apache.commons.io.IOUtils;
 import org.jboss.logging.Logger;
-import org.jboss.resteasy.plugins.providers.multipart.MultipartFormDataInput;
+import org.jboss.resteasy.reactive.server.multipart.MultipartFormDataInput;
 
 @Path(MULTIPART_FORM_PATH)
 public class MultipartResource {
@@ -30,12 +28,13 @@ public class MultipartResource {
     @Consumes(MediaType.MULTIPART_FORM_DATA)
     @Produces(MediaType.APPLICATION_JSON)
     public Response multipartFormData(final MultipartFormDataInput input) {
-        var inputPartText = input.getFormDataMap().get(TEXT).stream().findAny().orElse(null);
+        var inputPartText = input.getValues().get(TEXT).stream().findAny().orElse(null);
         if (inputPartText != null) {
             try {
-                String fileContent = IOUtils.toString(input.getFormDataPart(FILE, InputStream.class, null),
+                var inputPartFile = input.getValues().get(FILE).stream().findAny().orElse(null);
+                String fileContent = new String(inputPartFile.getFileItem().getInputStream().readAllBytes(),
                         StandardCharsets.UTF_8);
-                String text = inputPartText.getBodyAsString();
+                String text = inputPartText.getValue();
                 return Response.ok(new MultipartFormDataDTO(text, fileContent)).build();
             } catch (IOException e) {
                 LOGGER.errorf("Failed to retrieve form field value: %s", e.getMessage());
